# fastapi-template

./: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
