[project]
name = "report-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.12.1",
    "asyncpg>=0.28.0",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=23.10.1",
    "pytest>=7.4.3",
    "ruff>=0.1.5",
]
